force-app/main/default/objects/Car_Service__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oil Change</fullName>
                </value>
                <value>
                    <fullName>Tire Rotation</fullName>
                </value>
                <value>
                    <fullName>Brake Service</fullName>
                </value>
                <value>
                    <fullName>Engine Tune-up</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Car Service</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Car Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Service_Date_Required</fullName>
        <active>true</active>
        <description>Service Date is required for all Car Service records</description>
        <errorConditionFormula>ISBLANK(Service_Date__c)</errorConditionFormula>
        <errorDisplayField>Service_Date__c</errorDisplayField>
        <errorMessage>Service Date is required. Please select a date for this service.</errorMessage>
    </validationRules>
</CustomObject>